fix: removed lorem ipsum from sidebar component

--- a/app/templates/components/_sidebar.html
+++ b/app/templates/components/_sidebar.html
@@ -2,7 +2,7 @@
     <div class="card p-2">
         <div class="card-body">
             <h3 class="fs-5 fw-bold">🔥 Em alta</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, optio!</p>
+            <p>Veja os artigos mais engajados!</p>
             <ul class="list-group">
                 {% for article in trending %}
                     <li class="list-group-item">
